objects/pse__Timecard_Header__c.object
<CustomObject>
    <fields>
        <fullName>pse__Location_Wed__c</fullName>
        <label>Location - Wed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALABAMA</fullName>
                </value>
                <value>
                    <fullName>ALASKA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANZAC</fullName>
                </value>
                <value>
                    <fullName>ARIZONA</fullName>
                </value>
                <value>
                    <fullName>ARKANSAS</fullName>
                </value>
                <value>
                    <fullName>ASIA</fullName>
                </value>
                <value>
                    <fullName>CALIFORNIA</fullName>
                </value>
                <value>
                    <fullName>CANADA</fullName>
                </value>
                <value>
                    <fullName>COLORADO</fullName>
                </value>
                <value>
                    <fullName>CONNECTICUT</fullName>
                </value>
                <value>
                    <fullName>DELAWARE</fullName>
                </value>
                <value>
                    <fullName>DISTRICT OF COLUMBIA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>FEDERATED STATES OF MICRONESIA</fullName>
                </value>
                <value>
                    <fullName>FLORIDA</fullName>
                </value>
                <value>
                    <fullName>GEORGIA</fullName>
                </value>
                <value>
                    <fullName>GUAM</fullName>
                </value>
                <value>
                    <fullName>HAWAII</fullName>
                </value>
                <value>
                    <fullName>IDAHO</fullName>
                </value>
                <value>
                    <fullName>ILLINOIS</fullName>
                </value>
                <value>
                    <fullName>INDIANA</fullName>
                </value>
                <value>
                    <fullName>IOWA</fullName>
                </value>
                <value>
                    <fullName>KANSAS</fullName>
                </value>
                <value>
                    <fullName>KENTUCKY</fullName>
                </value>
                <value>
                    <fullName>LATIN AMERICA</fullName>
                </value>
                <value>
                    <fullName>LOUISIANA</fullName>
                </value>
                <value>
                    <fullName>MAINE</fullName>
                </value>
                <value>
                    <fullName>MARSHALL ISLANDS</fullName>
                </value>
                <value>
                    <fullName>MARYLAND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Milestone to which the timecard applies.</inlineHelpText>
        <label>Milestone</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pse__Milestone__c.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.pse__Project__c</valueField>
            </filterItems>
            <infoMessage>Only milestones for the same project are shown. To display all milestones, click Show all results.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>pse__Milestone__c</referenceTo>
        <relationshipLabel>Timecards</relationshipLabel>
        <relationshipName>Timecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Monday_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Monday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Monday_Notes__c</fullName>
        <label>Monday Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Override_Cost_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, it overrides the Group to which the Timecard Header &apos;s Cost Transactions will roll up for Group Actuals, even if its Project or Resource are in a different Group. Note that either way, the Cost Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, it overrides the Group to which the Timecard Header &apos;s Cost Transactions will roll up for Group Actuals, even if its Project or Resource are in a different Group.</inlineHelpText>
        <label>Override Cost Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Override Cost Group For Timecards</relationshipLabel>
        <relationshipName>Override_Cost_Group_For_Timecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Cost_Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, it overrides the Practice to which the Timecard Header &apos;s Cost Transactions will roll up for Practice Actuals, even if its Project or Resource are in a different Practice. Note that either way, the Cost Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, it overrides the Practice to which the Timecard Header &apos;s Cost Transactions will roll up for Practice Actuals, even if its Project or Resource are in a different Practice.</inlineHelpText>
        <label>Override Cost Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Override Cost Practice For Timecards</relationshipLabel>
        <relationshipName>Override_Cost_Practice_For_Timecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Cost_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, it overrides the Region to which the Timecard Header &apos;s Cost Transactions will roll up for Region Actuals, even if its Project or Resource are in a different Region. Note that either way, the Cost Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, it overrides the Region to which the Timecard Header &apos;s Cost Transactions will roll up for Region Actuals, even if its Project or Resource are in a different Region.</inlineHelpText>
        <label>Override Cost Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Override Cost Region For Timecards</relationshipLabel>
        <relationshipName>Override_Cost_Region_For_Timecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Revenue_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, it overrides the Group to which the Timecard Header &apos;s Revenue Transactions will roll up for Group Actuals, even if its Project or Resource are in a different Group. Note that either way, the Revenue Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, it overrides the Group to which the Timecard Header &apos;s Revenue Transactions will roll up for Group Actuals, even if its Project or Resource are in a different Group.</inlineHelpText>
        <label>Override Revenue Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Override Revenue Group For Timecards</relationshipLabel>
        <relationshipName>Override_Revenue_Group_For_Timecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Revenue_Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, it overrides the Practice to which the Timecard Header &apos;s Revenue Transactions will roll up for Practice Actuals, even if its Project or Resource are in a different Practice. Note that either way, the Revenue Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, it overrides the Practice to which the Timecard Header &apos;s Revenue Transactions will roll up for Practice Actuals, even if its Project or Resource are in a different Practice.</inlineHelpText>
        <label>Override Revenue Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Override Revenue Practice For Timecards</relationshipLabel>
        <relationshipName>Override_Revenue_Practice_For_Timecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Revenue_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If set, it overrides the Region to which the Timecard Header &apos;s Revenue Transactions will roll up for Region Actuals, even if its Project or Resource are in a different Region. Note that either way, the Revenue Transactions will continue to roll up to the same Project&apos;s Project Actuals and same Resource&apos;s Resource Actuals.</description>
        <inlineHelpText>If set, it overrides the Region to which the Timecard Header &apos;s Revenue Transactions will roll up for Region Actuals, even if its Project or Resource are in a different Region.</inlineHelpText>
        <label>Override Revenue Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Override Revenue Region For Timecards</relationshipLabel>
        <relationshipName>Override_Revenue_Region_For_Timecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Primary_Location__c</fullName>
        <label>Primary Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALABAMA</fullName>
                </value>
                <value>
                    <fullName>ALASKA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANZAC</fullName>
                </value>
                <value>
                    <fullName>ARIZONA</fullName>
                </value>
                <value>
                    <fullName>ARKANSAS</fullName>
                </value>
                <value>
                    <fullName>ASIA</fullName>
                </value>
                <value>
                    <fullName>CALIFORNIA</fullName>
                </value>
                <value>
                    <fullName>CANADA</fullName>
                </value>
                <value>
                    <fullName>COLORADO</fullName>
                </value>
                <value>
                    <fullName>CONNECTICUT</fullName>
                </value>
                <value>
                    <fullName>DELAWARE</fullName>
                </value>
                <value>
                    <fullName>DISTRICT OF COLUMBIA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>FEDERATED STATES OF MICRONESIA</fullName>
                </value>
                <value>
                    <fullName>FLORIDA</fullName>
                </value>
                <value>
                    <fullName>GEORGIA</fullName>
                </value>
                <value>
                    <fullName>GUAM</fullName>
                </value>
                <value>
                    <fullName>HAWAII</fullName>
                </value>
                <value>
                    <fullName>IDAHO</fullName>
                </value>
                <value>
                    <fullName>ILLINOIS</fullName>
                </value>
                <value>
                    <fullName>INDIANA</fullName>
                </value>
                <value>
                    <fullName>IOWA</fullName>
                </value>
                <value>
                    <fullName>KANSAS</fullName>
                </value>
                <value>
                    <fullName>KENTUCKY</fullName>
                </value>
                <value>
                    <fullName>LATIN AMERICA</fullName>
                </value>
                <value>
                    <fullName>LOUISIANA</fullName>
                </value>
                <value>
                    <fullName>MAINE</fullName>
                </value>
                <value>
                    <fullName>MARSHALL ISLANDS</fullName>
                </value>
                <value>
                    <fullName>MARYLAND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Primary_Project_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Project Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pse__Project_Location__c.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.pse__Project__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>pse__Project_Location__c</referenceTo>
        <relationshipLabel>Primary Location For Timecards</relationshipLabel>
        <relationshipName>Primary_Location_For_Timecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project_Exchange_Rate__c</fullName>
        <defaultValue>1.00</defaultValue>
        <description>Project (Bill Rate) Exchange Rate, relative to Corporate Currency, calculated on End Date of Timecard</description>
        <inlineHelpText>Project (Bill Rate) Exchange Rate, relative to Corporate Currency, calculated on End Date of Timecard</inlineHelpText>
        <label>Project Exchange Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Project_Location_Fri__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Location - Fri</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>pse__Project_Location__c.pse__Project__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>pse__Project_Location__c</referenceTo>
        <relationshipLabel>Friday Location For Timecards</relationshipLabel>
        <relationshipName>Friday_Location_For_Timecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project_Location_Mon__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Location - Mon</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pse__Project_Location__c.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.pse__Project__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>pse__Project_Location__c</referenceTo>
        <relationshipLabel>Monday Location For Timecards</relationshipLabel>
        <relationshipName>Monday_Location_For_Timecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project_Location_Sat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Location - Sat</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pse__Project_Location__c.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.pse__Project__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>pse__Project_Location__c</referenceTo>
        <relationshipLabel>Saturday Location For Timecards</relationshipLabel>
        <relationshipName>Saturday_Location_For_Timecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project_Location_Sun__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Location - Sun</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pse__Project_Location__c.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.pse__Project__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>pse__Project_Location__c</referenceTo>
        <relationshipLabel>Sunday Location For Timecards</relationshipLabel>
        <relationshipName>Sunday_Location_For_Timecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project_Location_Thu__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Location - Thu</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pse__Project_Location__c.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.pse__Project__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>pse__Project_Location__c</referenceTo>
        <relationshipLabel>Thursday Location For Timecards</relationshipLabel>
        <relationshipName>Thursday_Location_For_Timecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project_Location_Tue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Location - Tue</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pse__Project_Location__c.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.pse__Project__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>pse__Project_Location__c</referenceTo>
        <relationshipLabel>Tuesday Location For Timecards</relationshipLabel>
        <relationshipName>Tuesday_Location_For_Timecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project_Location_Wed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Location - Wed</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pse__Project_Location__c.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.pse__Project__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>pse__Project_Location__c</referenceTo>
        <relationshipLabel>Wednesday Location For Timecards</relationshipLabel>
        <relationshipName>Wednesday_Location_For_Timecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project_Methodology_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Methodology</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pse__Project_Methodology__c.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.pse__Project__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>pse__Project_Methodology__c</referenceTo>
        <relationshipLabel>Timecards</relationshipLabel>
        <relationshipName>Timecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project_Methodology__c</fullName>
        <inlineHelpText>The current step in the project methodology</inlineHelpText>
        <label>Project Methodology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Methodology Step 1</fullName>
                </value>
                <value>
                    <fullName>Methodology Step 2</fullName>
                </value>
                <value>
                    <fullName>Methodology Step 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Project_Phase_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The state of the project to which the time is to be booked.</inlineHelpText>
        <label>Project Phase</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pse__Project_Phase__c.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.pse__Project__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>pse__Project_Phase__c</referenceTo>
        <relationshipLabel>Timecards</relationshipLabel>
        <relationshipName>Timecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project_Phase__c</fullName>
        <inlineHelpText>The state of the project to which the time is to be booked.</inlineHelpText>
        <label>Project Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strategy</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Requirements</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
                <value>
                    <fullName>Deployment</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Project_Task_Hours__c</fullName>
        <inlineHelpText>The total number of hours linked to project tasks for this timecard.</inlineHelpText>
        <label>Project Task Hours</label>
        <summarizedField>pse__Task_Time__c.pse__Total_Hours__c</summarizedField>
        <summaryForeignKey>pse__Task_Time__c.pse__Timecard__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Project that the timecard applies to.</inlineHelpText>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Timecards</relationshipLabel>
        <relationshipName>Timecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Resource that the timecard applies to.</inlineHelpText>
        <label>Resource</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.pse__Is_Resource__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.pse__Is_Resource_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only active resources are shown. To display all resources, click Show all results.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Timecards</relationshipLabel>
        <relationshipName>Timecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Saturday_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Saturday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Saturday_Notes__c</fullName>
        <label>Saturday Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <inlineHelpText>Start date for the week that the timecard covers.</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <inlineHelpText>The current status of the timecard.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Saved</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether the timecard has been submitted for approval.</inlineHelpText>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Sunday_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Sunday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Sunday_Notes__c</fullName>
        <label>Sunday Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Thursday_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Thursday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Thursday_Notes__c</fullName>
        <label>Thursday Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Time_Credited__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether timecard hours are added to utilization calculations.</inlineHelpText>
        <label>Time Credited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Time_Excluded__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether timecard hours are subtracted from utilization calculations.</inlineHelpText>
        <label>Time Excluded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Timecard_Notes__c</fullName>
        <inlineHelpText>Weekly notes for the timecard line.</inlineHelpText>
        <label>Timecard Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Timecard_UI_Save_Submit_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For administrator use only. Selected if created from the Timecard UI by using Done. Not selected when using Save or Submit from the Timecard UI.</description>
        <inlineHelpText>For administrator use only. Selected if created from the Timecard UI by using Done. Not selected when using Save or Submit from the Timecard UI.</inlineHelpText>
        <label>Timecard UI Save/Submit Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Total_Billable_Amount__c</fullName>
        <formula>IF(pse__Billable__c,IF(pse__Daily_Bill_Rate__c,(pse__Total_Days_Worked__c * pse__Bill_Rate__c),(pse__Total_Hours__c * pse__Bill_Rate__c)), 0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Billable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Total_Cost__c</fullName>
        <formula>pse__Cost_Rate_Currency_Code__c &amp; &quot; &quot; &amp; TEXT(IF(pse__Daily_Cost_Rate__c,(pse__Cost_Rate_Amount__c * pse__Total_Days_Worked__c),(pse__Cost_Rate_Amount__c * pse__Total_Hours__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Total_Days_Worked_Advanced__c</fullName>
        <description>A rollup summary of the total days worked from the time card splits based on the hours to days conversion rules employed.</description>
        <label>Total Days Worked Advanced</label>
        <summarizedField>pse__Timecard__c.pse__Total_Days_Worked__c</summarizedField>
        <summaryForeignKey>pse__Timecard__c.pse__Timecard_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>pse__Total_Days_Worked__c</fullName>
        <formula>IF( NOT(ISNULL(pse__Days_Worked_Override__c)),
pse__Days_Worked_Override__c,
IF( NOT(ISNULL(pse__Total_Days_Worked_Advanced__c)),
pse__Total_Days_Worked_Advanced__c,
IF((pse__Sunday_Hours__c&gt;0),1,0) + IF((pse__Monday_Hours__c&gt;0),1,0) + IF((pse__Tuesday_Hours__c&gt;0),1,0) + IF((pse__Wednesday_Hours__c&gt;0),1,0) + IF((pse__Thursday_Hours__c&gt;0),1,0) + IF((pse__Friday_Hours__c&gt;0),1,0) + IF((pse__Saturday_Hours__c&gt;0),1,0)
)
)</formula>
        <inlineHelpText>Total number of days worked based on the number of hours entered on each day of the timecard. This number is used to calculate daily bill rates and daily cost rates.</inlineHelpText>
        <label>Total Days Worked</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Total_Hours__c</fullName>
        <formula>pse__Sunday_Hours__c + pse__Monday_Hours__c + pse__Tuesday_Hours__c + pse__Wednesday_Hours__c + pse__Thursday_Hours__c + pse__Friday_Hours__c + pse__Saturday_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total hours for the timecard line.</inlineHelpText>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Travel_Fri__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel - Fri</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Travel_Mon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel - Mon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Travel_Sat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel - Sat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Travel_Sun__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel - Sun</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Travel_Thu__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel - Thu</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Travel_Tue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel - Tue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Travel_Wed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel - Wed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Travel_Week__c</fullName>
        <formula>IF(OR(pse__Travel_Sun__c,pse__Travel_Mon__c,pse__Travel_Tue__c,pse__Travel_Wed__c,pse__Travel_Thu__c,pse__Travel_Fri__c,pse__Travel_Sat__c),&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Travel Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Tuesday_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Tuesday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Tuesday_Notes__c</fullName>
        <label>Tuesday Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Wednesday_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Wednesday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Wednesday_Notes__c</fullName>
        <label>Wednesday Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>